# ChangeLog for sys-kernel/tuxonice-sources
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/tuxonice-sources/ChangeLog,v 1.72 2010/02/09 21:00:48 nelchael Exp $

*tuxonice-sources-2.6.32-r4 (09 Feb 2010)
*tuxonice-sources-2.6.32-r3 (09 Feb 2010)

  09 Feb 2010; Krzysiek Pawlik <nelchael@gentoo.org>
  +tuxonice-sources-2.6.32-r3.ebuild, +tuxonice-sources-2.6.32-r4.ebuild:
  Revision bump for latest genpatches.

*tuxonice-sources-2.6.32-r1 (17 Jan 2010)
*tuxonice-sources-2.6.31-r9 (17 Jan 2010)
*tuxonice-sources-2.6.30-r10 (17 Jan 2010)

  17 Jan 2010; Krzysiek Pawlik <nelchael@gentoo.org>
  -tuxonice-sources-2.6.28-r10.ebuild, -tuxonice-sources-2.6.28-r11.ebuild,
  +tuxonice-sources-2.6.30-r10.ebuild, +tuxonice-sources-2.6.31-r9.ebuild,
  +tuxonice-sources-2.6.32-r1.ebuild:
  Revision bumps.

  17 Dec 2009; Pacho Ramos <pacho@gentoo.org>
  tuxonice-sources-2.6.30-r6.ebuild:
  stable amd64, bug 279650

*tuxonice-sources-2.6.32 (12 Dec 2009)
*tuxonice-sources-2.6.31-r7 (12 Dec 2009)
*tuxonice-sources-2.6.30-r9 (12 Dec 2009)

  12 Dec 2009; Krzysiek Pawlik <nelchael@gentoo.org>
  -tuxonice-sources-2.6.29-r4.ebuild, +tuxonice-sources-2.6.30-r9.ebuild,
  +tuxonice-sources-2.6.31-r7.ebuild, +tuxonice-sources-2.6.32.ebuild:
  Version bumps for new genpatches and new TuxOnIce patch version 3.0.99.41.

  03 Nov 2009; Christian Faulhammer <fauli@gentoo.org>
  tuxonice-sources-2.6.29-r4.ebuild, tuxonice-sources-2.6.30-r6.ebuild:
  stable x86, bug 279650

*tuxonice-sources-2.6.31 (29 Sep 2009)
*tuxonice-sources-2.6.30-r6 (29 Sep 2009)

  29 Sep 2009; Krzysiek Pawlik <nelchael@gentoo.org>
  -tuxonice-sources-2.6.29-r3.ebuild, -tuxonice-sources-2.6.30-r4.ebuild,
  -tuxonice-sources-2.6.30-r5.ebuild, +tuxonice-sources-2.6.30-r6.ebuild,
  +tuxonice-sources-2.6.31.ebuild:
  Version bumps, remove old versions.

*tuxonice-sources-2.6.30-r5 (14 Aug 2009)

  14 Aug 2009; Krzysiek Pawlik <nelchael@gentoo.org>