@@ -9,6 +9,8 @@ DIST genpatches-2.6.30-8.base.tar.bz2 129153 RMD160 c70814ecb2f5655d98af90c0e357
 DIST genpatches-2.6.30-8.extras.tar.bz2 24978 RMD160 95e44fd010bf659a59087b91d95c7982e6877b3e SHA1 de8e4cc7fac2f445ac077928b868c4474c7a3012 SHA256 faaad5a9cf5c92d6d97843aed4cee8c20d431e9542628410cb0c75b7ea51bc88
 DIST genpatches-2.6.31-10.base.tar.bz2 240152 RMD160 e0d61d003634e7137e915f9e9c44f761b774d6d5 SHA1 d4e6ef579300d85b02d422196bd8fe3509f0c8f4 SHA256 73abf301b2f63f325f12bd93c53ceaa32623c9084b30c6795e6462046d67ef21
 DIST genpatches-2.6.31-10.extras.tar.bz2 24961 RMD160 20c268bccebfe31a2897359ae17534363d0136b4 SHA1 6ba14f68ce80068eb3e4abe1069848e85b6a31a1 SHA256 ccf0dc37d1a799bcc67bd9eb3e971b346af8495d1826d7d3f3711819812c2120
+DIST genpatches-2.6.31-11.base.tar.bz2 255895 RMD160 001a46ff30496a3b0960fe72bf52eb2f2a10d512 SHA1 c4a0160e51e1bf2e1ac10a74a457de5ce8b011fa SHA256 a3499d8942d76a8b1fdedace50417e8b8df20155ff6c987c34901e916a4ec508
+DIST genpatches-2.6.31-11.extras.tar.bz2 24940 RMD160 c492175a249866311f8f8ae10a221adffc855806 SHA1 0b08312cfde1b7cf8445661ea0d26a7b2a4a47a2 SHA256 301642e9874e0afde820dbbf650172552e898bf965f1598e1ec34ce0874c5d80
 DIST genpatches-2.6.31-2.base.tar.bz2 23763 RMD160 6cade8251df85907c1f4f7d02b5d3272932dd0a3 SHA1 b2fbb60bafaa7cf0bc9d690f5a4194f76af18320 SHA256 824e031f36cfae7c69d48bb6f0e4f99e8c2475beb051da48a6546d89513c66f5
 DIST genpatches-2.6.31-2.extras.tar.bz2 24978 RMD160 3d7efe69b70580343927b031460b225b2987791a SHA1 ad6d1b383ae3c9073c45dab6ce355695bdbf0e83 SHA256 ad111e0117f15d54a514add96a08bb15db6726fb19085e27a9d270e36e458c1d
 DIST genpatches-2.6.31-8.base.tar.bz2 173661 RMD160 8de33f63f130d8cf3750c4d379432c0ef06f02d6 SHA1 975439f30d39ebc177942aa78d73a7b4cbe8704f SHA256 e3d019ce31680c39be468c4698364ab58632ebbbf0602c2d4a87e72202d3f1e0
@@ -33,6 +35,7 @@ DIST tuxonice-3.0.99.44-for-2.6.32.patch.bz2 119595 RMD160 992f0bbd57cc9a37e19da
 EBUILD tuxonice-sources-2.6.30-r10.ebuild 1422 RMD160 54f55546756e279bd8496f8189241f319db01df9 SHA1 f1df3895c4b5e63cf5f2a45445c4cff72548acf1 SHA256 7bef2b771f5480264dbd70a0337c3e5c17db508d33b7cbddb92f899cf62f7a22
 EBUILD tuxonice-sources-2.6.30-r6.ebuild 1417 RMD160 0e36684b21d58f2b8633b171251633d5212d3487 SHA1 6ceef4b8851250ca0aaac91f1afe01e63be2bc74 SHA256 6d1f28925aecec4c27abd1eef361ec7e8d0a6ce4a1dbd0a8d9e9ad6d15e243ba
 EBUILD tuxonice-sources-2.6.30-r9.ebuild 1420 RMD160 e5f085447763e76a222a747d00b5462d92330ffb SHA1 2a4b3b9b3417bb761db51cd9b9fad270a43decd0 SHA256 10afb14f6e963a2a34c3df0b359ffcb9c8dcd09552024d3b6919940ba0f76f0c
+EBUILD tuxonice-sources-2.6.31-r10.ebuild 1422 RMD160 b7ddb35e7c21109e597e5b9bdf3dda969055e732 SHA1 7eaefae27c46900a6027b3a470d0ee99f7b4a775 SHA256 28b43a4d67c35ad843c5736068678ac1f8a575bc8b920c7ef86781b41eb8118f
 EBUILD tuxonice-sources-2.6.31-r7.ebuild 1420 RMD160 6f9090a2677ae6a7f65a52cf59140d16551a1996 SHA1 719ae068f7335d8a914d38a6b79b62bb09120f3b SHA256 676337191fb25267481941610e69bdcd8fb64b0583e09171c08285ffd77bc39e
 EBUILD tuxonice-sources-2.6.31-r9.ebuild 1421 RMD160 e048a75fdc6a4e8a0551fe28b9dc47d441f56a35 SHA1 01b55d3a45399160bac46faf959dff7b820426f5 SHA256 5842c3a37fe5b1d4109eb99cba5021ed2a814767e36da5d8c06b484131b34194
 EBUILD tuxonice-sources-2.6.31.ebuild 1419 RMD160 24559c39e50d1d3acbc667afced58f957a11176b SHA1 bda8c70cf5d797739ceea36c3e9ed81fc96b4e8d SHA256 237b9b50942da4f8106b5608d78738e2505c0a30dcc2da91ba6ee59b49155e9a
@@ -40,12 +43,12 @@ EBUILD tuxonice-sources-2.6.32-r1.ebuild 1420 RMD160 077d6249c043c7ebebc619d6381
 EBUILD tuxonice-sources-2.6.32-r3.ebuild 1420 RMD160 0d7154739bfe916629513ce8ffa105e21b3fcddc SHA1 c193df2e9f3352faaa05e78ed1f8201cdf82fe07 SHA256 ac06278fe47ddc5735c8c52316af380d0f2047126ceadfb54898ee22c0cef1fa
 EBUILD tuxonice-sources-2.6.32-r4.ebuild 1420 RMD160 298f880ce670a6c1daa17a1e53175940b9f47473 SHA1 ce71da0b6e5e36387bb18731bbf7140d565e4d65 SHA256 0690e5cce101c51cfc47f4393ebd7da519eb6d5155999aebb791a91951afd740
 EBUILD tuxonice-sources-2.6.32.ebuild 1417 RMD160 c77fab825c586b4b1abadc37f5d24871afc55105 SHA1 578bd59437552de47b2e78a6ed1f09dc9e4e50ce SHA256 dbb86661177f219b3e11c6af708381f558e68d54c4be2117b56406b8c4212e64
-MISC ChangeLog 40269 RMD160 6d8a3f5001ac4682771443d06c8ad72b1f4e6d8e SHA1 1d9de452883bfd86de11360bef878251b4841f9e SHA256 00c0a8c8b3f76c518db42c8d96d004120f19dcd564b9a92183f47c41f8ea7db9
+MISC ChangeLog 40445 RMD160 d001a38e1c80faa085729b2c94a5272f0453eea3 SHA1 140172005b4478e9daf355e615fac98f5ceb6958 SHA256 ff02256adbcdf2f830dd7a3cfdaf40216801956e9035459a53482b7643bc259a
 MISC metadata.xml 278 RMD160 ed11e2348ca2d8f2bd5d647afab7eedf49ed4fea SHA1 7fecfe735fd49536863c0045aa1548860ad89797 SHA256 17c4da4868f175afef2cf8bca329a88c874b117ed9c242ec2139864475606bbe
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAktxzQYACgkQgo/w9rxVVVHbywCeODdr+MdgnLPQ7DILcpqfQTrh
-+H8An0rfRnh2PzDFr/mRWbNZlnU2TTja
-=qPZO
+iEYEARECAAYFAktx060ACgkQgo/w9rxVVVG7eACfcRYJs3sTgp0zBV07ooxpO5o8
+GVYAn3F+Hwx+PqeznPtYX5eXrtpGMe3Z
+=zcAy
 -----END PGP SIGNATURE-----
