@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/tuxonice-sources
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/tuxonice-sources/ChangeLog,v 1.72 2010/02/09 21:00:48 nelchael Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/tuxonice-sources/ChangeLog,v 1.73 2010/02/09 21:29:11 nelchael Exp $
+
+*tuxonice-sources-2.6.31-r10 (09 Feb 2010)
+
+  09 Feb 2010; Krzysiek Pawlik <nelchael@gentoo.org>
+  +tuxonice-sources-2.6.31-r10.ebuild:
+  Revision bump for latest genpatches.
 
 *tuxonice-sources-2.6.32-r4 (09 Feb 2010)
 *tuxonice-sources-2.6.32-r3 (09 Feb 2010)
